# StellarIQ_API

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  POETRY_MIGRATION.md  README.md  alembic.ini  check_db.py  config.py  debug_deletion.py  docker-compose.yml  log_conf.yaml  main.py  pyproject.toml  quick_push_test.py  requirements.txt  setup_push_notifications.py  start.sh  test_email_alerts.py  test_market_alert.py  test_notifications.py  test_push_notifications.py  verify_push_config.py
StellarIQ_Mobile/: API_INTEGRATION_UPDATE_SUMMARY.md  password_change_feature.md  technical_indicators_fix.md  test_candlestick_fix.md
alembic/: env.py
alembic/versions/: 0019d798a454_add_notification_tables.py  00bdb1b5f6bc_add_refresh_token_fields_to_users_table.py  00c9459617c5_create_notification_tables.py  07029ea340ee_add_disclaimer_agreement_fields_to_.py  09f04dd11024_add_crypto_portfolio_table.py  4b038b1ec8a1_add_account_deletion_requests_table.py  500deabc123a_create_account_deletion_requests_table.py  58e38bcdfbc6_add_notification_models.py  5a6b9210c7d4_add_password_reset_fields_to_users_table.py  7454305329f1_add_price_alert_fields_to_favorites.py  83966a3c89d5_add_email_confirmation_fields_to_.py  9b7cdfaa2f7e_add_alert_fields_to_favorites.py  b4e7e877ac14_add_refresh_token_fields_to_users_table.py  b6b7fb8591b3_initial_migration_with_all_models.py  d34e07c56118_add_user_profile_fields.py
app/: __init__.py  scratch.py
app/core/: auth.py  database.py  redis.py  security.py  valkey.py
app/models/: __init__.py  account_deletion.py  cache.py  crypto_portfolio.py  device_token.py  favorite.py  notification.py  user.py
app/routers/: analysis.py  auth.py  charts.py  crypto.py  favorites.py  indicators.py  notifications.py  stocks.py
app/schemas/: account_deletion.py  analysis.py  charts.py  crypto.py  favorite.py  indicators.py  notification.py  stock.py  user.py
app/services/: account_deletion.py  alpha_vantage.py  auth.py  crypto_portfolio.py  email.py  favorites.py  market_analysis.py  market_data.py  market_monitor.py  notification.py  scheduler.py
app/templates/: account-deletion-confirmed.html  account-deletion.html  privacy-policy.html
app/utils/: chart_formatter.py  data_parser.py  technical_analysis.py
docs/: CRYPTO_API.md
scripts/: check-setup.py  setup-dev.bat  setup-dev.sh
tests/: conftest.py  quick_push_test.py  register_test_device.py  test_auth.py  test_data_parser.py  test_push_notifications.py
